# data_loader_elt

./: .env.template  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/config/: __init__.py  config.py  logger_config.py
src/database/: __init__.py  connections.py  db_base.py
src/database/migrations/: 01_create_schemas.sql  02_create_stg_tables.sql  03_create_dds_tables.sql
src/database/models/: __init__.py  dds_h_post.py  dds_h_user.py  dds_l_user_post.py  dds_s_post.py  dds_s_user.py  stg_posts.py
src/elts/: __init__.py
src/elts/elt1/: api_to_stg.py
src/elts/elt2/: stg_to_dds.py
src/schemas/: __init__.py  dds_h_post.py  dds_h_user.py  dds_l_user_post.py  dds_s_post.py  dds_s_user.py  stg_posts.py
src/scripts/: create_db.py
src/utils/: __init__.py  generate_hash.py
