[tool.poetry]
name = "data-loader-elt"
version = "0.1.0"
description = ""
authors = ["angelina <cher.rly2036@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pydantic = "^2.10.4"
sqlalchemy = "^2.0.36"
psycopg2-binary = "^2.9.10"


[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.1"
ruff = "^0.8.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 120
target-version = "py312"
exclude = ["migrations", ".venv"]
indent-width = 4
fix = true